# gloggerai

./: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json  vitest.config.ts
.github/workflows/: ci.yml
docs/: DEPLOY.md
drizzle/: 0001_search_index.sql  0002_embeddings.sql  0003_jobs.sql  0004_orgs.sql  0005_analytics.sql  0006_billing.sql  0007_security.sql  0008_oauth.sql  0009_content.sql  0010_engagement.sql  0011_drop_view_count.sql
examples/demo-agent/: README.md  bulk-import.ts  feedback-loop.ts  seo-loop.ts
sdk/: README.md
sdk/python/: README.md  pyproject.toml
sdk/python/gloggerai/: __init__.py  client.py
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/typescript/src/: index.ts
src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/app/@[handle]/: page.tsx
src/app/[handle]/: follow-button.tsx  page.tsx
src/app/dashboard/: api-key-manager.tsx  oauth-apps.tsx  page.tsx  sign-out.tsx
src/app/feed/: page.tsx
src/app/feed.xml/: route.ts
src/app/forgot-password/: page.tsx
src/db/: client.ts  migrate.ts  schema.ts  seed.ts
src/jobs/: run.ts
src/lib/: env.ts  utils.ts
src/mcp/: server.ts  sse-server.ts  tools.ts
tests/: README.md  api-key.test.ts  email.test.ts  moderation.test.ts  password.test.ts  plans.test.ts  preview-token.test.ts  s3-sign.test.ts  sentry.test.ts  seo-analyzer.test.ts  setup-env.ts  url-allowlist.test.ts  utils.test.ts
tests/integration/: engagement.test.ts  idempotency.test.ts  publish-gates.test.ts  setup.ts
(+121 files in other folders)
