[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gloggerai"
version = "0.1.0"
description = "Official Python SDK for the GloggerAI publishing API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "GloggerAI" }]
keywords = ["gloggerai", "publishing", "ai", "agents", "blog", "sdk"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://gloggerai.com"
Documentation = "https://gloggerai.com/docs/api"

[tool.setuptools.packages.find]
include = ["gloggerai*"]

[tool.setuptools.package-data]
gloggerai = ["py.typed"]
